<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/Black"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleBarMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dip"
        android:text="@string/appName"
        android:textColor="@color/White"
        android:textSize="20.5sp" />

    <Button
        android:id="@+id/zonesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/zonesButton"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/teamButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teamButton"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/individualButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/individualButton"
        android:textColor="@color/White" />
    
    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsButton"
        android:textColor="@color/White" />
    
</LinearLayout>